// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppPage should render the AppPage loading when first connected to Optimizely 1`] = `
<div>
  <div
    class="css-1a8f5ni"
  />
  <div
    class="css-jwwzlh"
  >
    <div>
      <div
        class="Typography__Typography___1ZUfE"
        data-test-id="cf-ui-text-container"
      >
        <h1
          class="Heading__Heading___83D3K f36-margin-bottom--m"
          data-test-id="cf-ui-heading"
        >
          Connect Optimizely
        </h1>
        <p
          class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          You’re currently connected to Optimizely.
        </p>
        <p
          class="Paragraph__Paragraph___2aO-9 css-j3lppu f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          This access token is valid for 2 hours – after this you must reauthorize with Optimizely.
        </p>
      </div>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-12)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-13);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-12"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-13"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-14"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-14.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-14.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-15)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-16);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-15"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-16"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-17"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-17.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-17.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="css-fngmsh"
  >
    <svg
      arccolor="#0037FF"
      height="60"
      viewBox="0 0 150 150"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M50.29 81.41V99.1a49.41 49.41 0 0 0 49.35-49.35H82a31.71 31.71 0 0 1-31.71 31.66Z"
        style="fill: #3be081;"
      />
      <path
        d="M50.29 130.16a31.43 31.43 0 0 1 0-62.85V49.76a49 49 0 0 0-.14 98h.14Z"
        style="fill: #0037FF;"
      />
      <path
        d="M50.29 130.16v17.55a49 49 0 0 0 49-49H81.72a31.46 31.46 0 0 1-31.43 31.45Z"
        style="fill: #0cf;"
      />
      <path
        d="M50.29 32.19v17.56a49 49 0 0 0 49-49H81.72a31.46 31.46 0 0 1-31.43 31.44Z"
        style="fill: #861dff;"
      />
      <path
        d="M99.59 32.19v17.56a49 49 0 0 0 49-49H131a31.46 31.46 0 0 1-31.41 31.44Z"
        style="fill: #fc7f10;"
      />
    </svg>
  </div>
</div>
`;

exports[`AppPage should render the AppPage with Features and connect button 1`] = `
<div>
  <div
    class="css-1a8f5ni"
  />
  <div
    class="css-jwwzlh"
  >
    <div>
      <div
        class="Typography__Typography___1ZUfE"
        data-test-id="cf-ui-text-container"
      >
        <h1
          class="Heading__Heading___83D3K f36-margin-bottom--m"
          data-test-id="cf-ui-heading"
        >
          Connect Optimizely
        </h1>
        <p
          class="Paragraph__Paragraph___2aO-9 f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          You’re currently connected to Optimizely.
        </p>
        <p
          class="Paragraph__Paragraph___2aO-9 css-j3lppu f36-margin-bottom--m"
          data-test-id="cf-ui-paragraph"
        >
          This access token is valid for 2 hours – after this you must reauthorize with Optimizely.
        </p>
      </div>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-6)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-7);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-6"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-7"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-8"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-8.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-8.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
    <hr
      class="css-10hsrou"
    />
    <div>
      <svg
        aria-label="Loading component..."
        class="SkeletonContainer__SkeletonContainer___23jiu"
        data-test-id="cf-ui-skeleton-form"
        height="100%"
        preserveAspectRatio="xMidYMid meet"
        role="img"
        width="100%"
      >
        <title>
          Loading component...
        </title>
        <rect
          clip-path="url(#cf-ui-skeleton-clip-9)"
          height="100%"
          style="fill: url(#cf-ui-skeleton-clip-gradient-10);"
          width="100%"
          x="0"
          y="0"
        />
        <defs>
          <clippath
            id="cf-ui-skeleton-clip-9"
          >
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="35"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="59"
            />
            <rect
              height="16"
              rx="0"
              ry="0"
              width="80%"
              x="0"
              y="83"
            />
          </clippath>
          <lineargradient
            id="cf-ui-skeleton-clip-gradient-10"
          >
            <stop
              offset="0%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                dur="2s"
                id="animation-11"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="50%"
              stop-color="#f7f9fa"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-11.begin+0.25s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
            <stop
              offset="100%"
              stop-color="#e5ebed"
              stop-opacity="1"
            >
              <animate
                attributeName="stop-color"
                begin="animation-11.begin+0.5s"
                dur="2s"
                repeatCount="indefinite"
                values="#e5ebed; #f7f9fa; #e5ebed"
              />
            </stop>
          </lineargradient>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="css-fngmsh"
  >
    <svg
      arccolor="#0037FF"
      height="60"
      viewBox="0 0 150 150"
      width="60"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M50.29 81.41V99.1a49.41 49.41 0 0 0 49.35-49.35H82a31.71 31.71 0 0 1-31.71 31.66Z"
        style="fill: #3be081;"
      />
      <path
        d="M50.29 130.16a31.43 31.43 0 0 1 0-62.85V49.76a49 49 0 0 0-.14 98h.14Z"
        style="fill: #0037FF;"
      />
      <path
        d="M50.29 130.16v17.55a49 49 0 0 0 49-49H81.72a31.46 31.46 0 0 1-31.43 31.45Z"
        style="fill: #0cf;"
      />
      <path
        d="M50.29 32.19v17.56a49 49 0 0 0 49-49H81.72a31.46 31.46 0 0 1-31.43 31.44Z"
        style="fill: #861dff;"
      />
      <path
        d="M99.59 32.19v17.56a49 49 0 0 0 49-49H131a31.46 31.46 0 0 1-31.41 31.44Z"
        style="fill: #fc7f10;"
      />
    </svg>
  </div>
</div>
`;
